@@ -1,3 +1,8 @@
+2007-10-14  David Gravereaux <davygrvy@pobox.com>
+
+	* tools/mkdepend.tcl (new):  Initial stab at generating automatic
+	* win/makefile.vc:           dependencies.
+
 2007-10-12  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* win/makefile.vc:  Mine all version information from headers.
